commands/kubernetes/tools/kind/nginx/lb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
